Attempt 1 - production bug on iphones whereby media-scroller not scrolling. Changed CSS scroll behaviour.

--- a/c2_main_app/static/c2_main_app/styles/_home-products.scss
+++ b/c2_main_app/static/c2_main_app/styles/_home-products.scss
@@ -1,4 +1,5 @@
 .media-scroller {
+    position: relative;
     padding: 0 var(--edge-margin--);
     display: grid;
     gap: calc(max(5vw, 40px));
@@ -6,12 +7,12 @@
     grid-auto-columns: var(--product-cols--);
     padding: 0 0 5rem 0;
     overflow-x: auto;
+    scroll-behavior: smooth;
     overscroll-behavior-inline: contain;
     margin-left: var(--edge-margin--);
 
     .media-element {
         width: clamp(200px, calc(180px + 15vw), 300px);
-    
         display: flex;
         flex-direction: column;
         border-radius: 10px;
